// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ConfirmModal renders with body 1`] = `
<Component
  body="Body"
  noLabel="No"
  onCloseButtonClick={[MockFunction]}
  onNo={[MockFunction]}
  onYes={[MockFunction]}
  title="Title"
  visible={true}
  yesLabel="Yes"
>
  <styled.div>
    <styled.div>
      Title
    </styled.div>
    <styled.div>
      Body
    </styled.div>
    <styled.div>
      <button2
        onClick={[MockFunction]}
        progress={false}
        size="s"
        theme="action"
        view="classic"
      >
        Yes
      </button2>
      <button2
        disabled={false}
        onClick={[MockFunction]}
        size="s"
        theme="normal"
        view="classic"
      >
        No
      </button2>
    </styled.div>
  </styled.div>
</Component>
`;

exports[`ConfirmModal renders without body 1`] = `
<Component
  noLabel="No"
  onCloseButtonClick={[MockFunction]}
  onNo={[MockFunction]}
  onYes={[MockFunction]}
  title="Title"
  visible={true}
  yesLabel="Yes"
>
  <styled.div>
    <styled.div>
      Title
    </styled.div>
    <styled.div>
      <button2
        onClick={[MockFunction]}
        progress={false}
        size="s"
        theme="action"
        view="classic"
      >
        Yes
      </button2>
      <button2
        disabled={false}
        onClick={[MockFunction]}
        size="s"
        theme="normal"
        view="classic"
      >
        No
      </button2>
    </styled.div>
  </styled.div>
</Component>
`;
